TheMightyDude (05 February 2013)
--------------------------------------
Ok, fixed everything with sub-projects that are installed via Composer, everything _should_ work now.
Test SVN auto updates. (IGNORE)

TheMightyDude (02 February 2013)
--------------------------------------
Add Smarty v3.1.13 into the code base.

TheKabal (2 February 2013)
--------------------------------------
num_shields has been replaced by \bnt\CalcLevels::Shields, which is auto-loaded from the vendor/bnt directory.
num_holds has been replaced by \bnt\CalcLevels::Holds, which is auto-loaded from the vendor/bnt directory.
player_log has been replaced by \bnt\PlayerLog::writeLog, which is auto-loaded from the vendor/bnt directory.
log_move has been replaced by \bnt\LogMove::writeLog, which is auto-loaded from the vendor/bnt directory.
admin_log has been replaced by \bnt\adminLog::writeLog, which is auto-loaded from the vendor/bnt directory.

TheKabal (31 January 2013)
--------------------------------------
Adodb now auto-configures its path, so we do not need admins to set it.
Expanded and updated the documentation in docs/

TheKabal (30 January 2013)
--------------------------------------
Moved plugins from classes/ to vendor/, all classes now belong under vendor!
Fixed psr-0 compliance for vendor/bnt/sectorDefense.php
Fixed typo in variable assignment in admin preventing access to admin panel
Replaced global status for benchmark timer for now
Ran php coding standards fixer ( http://cs.sensiolabs.org/ ) to get us closer to consistent/compliant with most of PSR. 
php-cs-fixer fix . --fixers=linefeed,short_tag,indentation,trailing_spaces,unused_use,short_tag,return,extra_empty_lines,include,controls_spaces,elseif,visibility,phpdoc_params,eof_ending
Cleaned up and re-implemented the timer class as an autoloaded class in our vendor directory

TheMightyDude (30 January 2013)
--------------------------------------
PluginSystem: Moved $GLOBALS over to an Internal Static Variable.