@@ -439,7 +439,7 @@ elseif ($sectorinfo['port_type'] == "special")
     $fighter_free = $fighter_max - $playerinfo['ship_fighters'];
     $torpedo_max = NUM_TORPEDOES ($playerinfo['torp_launchers']);
     $torpedo_free = $torpedo_max - $playerinfo['torps'];
-    $armor_max = NUM_ARMOR ($playerinfo['armor']);
+    $armor_max = \bnt\CalcLevels::Armor ($playerinfo['armor'], $level_factor);
     $armor_free = $armor_max - $playerinfo['armor_pts'];
     $colonist_max = \bnt\CalcLevels::Holds ($playerinfo['hull'], $level_factor) - $playerinfo['ship_ore'] - $playerinfo['ship_organics'] - $playerinfo['ship_goods'];
 
