@@ -64,7 +64,7 @@ else
 
 $holds_used = $playerinfo['ship_ore'] + $playerinfo['ship_organics'] + $playerinfo['ship_goods'] + $playerinfo['ship_colonists'];
 $holds_max = \bnt\CalcLevels::Holds ($playerinfo['hull'], $level_factor);
-$armor_pts_max = NUM_ARMOR ($playerinfo['armor']);
+$armor_pts_max = \bnt\CalcLevels::Armor ($playerinfo['armor'], $level_factor);
 $ship_fighters_max = NUM_FIGHTERS ($playerinfo['computer']);
 $torps_max = NUM_TORPEDOES ($playerinfo['torp_launchers']);
 $energy_max = NUM_ENERGY($playerinfo['power']);
