@@ -510,7 +510,7 @@ else
           }
           if ($xenlevel=='') $xenlevel=0;
           $maxenergy = NUM_ENERGY($xenlevel);
-          $maxarmor = NUM_ARMOR($xenlevel);
+          $maxarmor = \bnt\CalcLevels::Armor ($xenlevel, $level_factor);
           $maxfighters = NUM_FIGHTERS($xenlevel);
           $maxtorps = NUM_TORPEDOES($xenlevel);
           $stamp=date("Y-m-d H:i:s");
