@@ -1,3 +1,7 @@
+TheKabal (5 February 2013)
+--------------------------------------
+num_armor has been replaced by \bnt\CalcLevels::Armor, which is auto-loaded from the vendor/bnt directory.
+
 TheMightyDude (05 February 2013)
 --------------------------------------
 Ok, fixed everything with sub-projects that are installed via Composer, everything _should_ work now.
